# repro-bazel-alias-providers

./: BUILD.bazel  debug.bzl
cc/: debug.bzl
py/: BUILD.bazel  debug.bzl
