load("debug.bzl", "cc_wrapper_library", "debug")

cc_library(
    name = "lib",
    srcs = ["lib.c"],
)
debug(
    name = "dbg-lib",
    target = ":lib",
)

alias(
    name = "alias",
    actual = ":lib",
)
debug(
    name = "dbg-alias",
    target = ":alias",
)

cc_wrapper_library(
    name = "wrapped-lib",
    target = ":lib",
)
alias(
    name = "wrapped-alias",
    actual = ":wrapped-lib",
)
debug(
    name = "dbg-wrapped-alias",
    target = ":wrapped-alias",
)
